Vertical align fix

--- a/less/main.less
+++ b/less/main.less
@@ -12,7 +12,7 @@
 	right:150px;
 	bottom:10px;
 	left:10px;
-	height:230px;
+
 	>div{
 		
 	}
